# pi-mono

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CODE_TASK_ADD_KIRO_PROVIDER.md  CODE_TASK_FIX_KIRO_PROVIDER.md  CODE_TASK_KIRO_CUSTOM_PROVIDER.md  CODE_TASK_KIRO_PROVIDER_ENHANCEMENTS.md  CONTRIBUTING.md  Cargo.toml  ENERGY_AWARENESS.md  FUGUE_ACCEPTANCE_TESTS.md  FUGUE_BUILD_LOG.md  LOCAL-LLM-PLAN.md  Makefile  README.md  RUST_PARITY.md  TERMUX_TEST.md  TUTORIALS.md  VACATION.md  biome.json  check-config.ts  coordination-log-2026-01-07T21-14-26.md  docker-compose.yml  energy_aware_agent_plan.md  extract_models.py  package-lock.json  package.json  pi-dev  pi-mono.code-workspace  pi-test.cmd  pi-test.sh  ralph.yml  rename_packages.js  sync-upstream.ps1  sync-upstream.sh  test.cmd  test.sh  (+4 more)
.agent/: memories.md  summary.md  tasks.jsonl
.changeset/: clean-release-migration.md  config.json  fuzzy-pandas-sin.md
.husky/: pre-commit
.pi/: settings.json
.ralph/: current-events  events-20260204-223413.jsonl  events-20260206-182613.jsonl  events.jsonl  history.jsonl
deploy/: .env.example  common.env.example  compose.yml  docker-compose.yaml  mom.env.example  updater.env.example
docs/: docusaurus.config.js  package.json  sidebars.js
mono-vs-oh/: oh-my-pi-feature-diff-guide.md
ops/: README.md
plans/: plan-docusaurus-documentation.md
qwen-studydoc/: pi-coding-agent-session-persistence.md
scripts/: browser-smoke-entry.ts  build-binaries.ps1  build-binaries.sh  build-windows.ps1  cost.ts  pi-test.mjs  reset-install.mjs  (+5 more)
(+89 files in other folders)
